Fix spacing for error messages

--- a/css/compat/plugins/compat-wc-brt-fermopoint-shipping-methods-411-beta-1.css
+++ b/css/compat/plugins/compat-wc-brt-fermopoint-shipping-methods-411-beta-1.css
@@ -2,6 +2,7 @@ body.woocommerce-checkout .updatePudo {
   display: inline-block;
 }
 
-body.woocommerce-checkout #wc_brt_fermopoint_shipping_methods_custom-div_container {
+body.woocommerce-checkout #wc_brt_fermopoint_shipping_methods_custom-div_container,
+body.woocommerce-checkout .wc_brt_tr_alert {
   margin-top: 20px;
 }
